<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="0dp"
        android:layout_height="139dp"
        android:layout_marginTop="156dp"
        android:contentDescription="@string/logoimage"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_photo" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/logoImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nameTextField"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/palindromeTextField"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_vertical"
                android:hint="@string/palindrome"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameTextField" />

            <Button
                android:id="@+id/checkButton"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/check"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/buttonColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/palindromeTextField" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/next"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/buttonColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
